objects/ssot__ContractDocumentVersion__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ContractDocumentTemplateId__c</fullName>
        <label>Contract Document Template</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContractDocumentVersionStatus__c</fullName>
        <label>Contract Document Version Status</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContractDocumentVersionText__c</fullName>
        <label>Contract Document Version Text</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContractId__c</fullName>
        <label>Contract</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedByFullName__c</fullName>
        <label>Created By Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedById__c</fullName>
        <label>Created By</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CreationProcessType__c</fullName>
        <label>Creation Process Type</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DocConversionResourceName__c</fullName>
        <label>Document Conversion Resource Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HasNewTemplateVersionAvl__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Template Version Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__HasReconRedlinedSection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Reconciled Redlined Section</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__HasRedlinedSection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contains Redlined Section</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Contract Document Version Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsDocumentVersionLocked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Document Version Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsLockedByCurrentUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked By Current User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsSectionInfoStoredInDoc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Section Info Stored In Doc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsStateMdlTrnstBypassed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is State Model Trnst Bypassed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedById__c</fullName>
        <label>Last Modified By</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LockType__c</fullName>
        <label>Lock Type</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LockedByUserName__c</fullName>
        <label>Locked By User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LockedBy__c</fullName>
        <label>Locked By</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__NonStandardSectionCount__c</fullName>
        <label>Non Standard Section Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ReconRedlinedSectionCount__c</fullName>
        <label>Reconciled Redlined Section Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RedlinedSectionCount__c</fullName>
        <label>Redlined Section Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__VersionNumber__c</fullName>
        <label>Version Number</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1732853007402_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ContractDocumentVersion_LastModified_rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>ContractDocumentVersion_LastModified_rel</relationshipLabel>
        <relationshipName>rel_1732853007402_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1732853010498_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ContractDocumentVersion_CreatedById__rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>ContractDocumentVersion_CreatedById__rel</relationshipLabel>
        <relationshipName>rel_1732853010498_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1732853015708_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ContractDocumentVersion_LockedBy_map_rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>ContractDocumentVersion_LockedBy_map_rel</relationshipLabel>
        <relationshipName>rel_1732853015708_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>